Fix test failures and style issues